18Mar01=======================================================================
1. minor changes to user and admin manuals.  Added revsion numbers
17Mar01=======================================================================
1. put block check back in, try a work around for EWOULDBLOCK/EINPROGRESS
for M$. 
16Mar01=======================================================================
1. integrate build number into main cluster and change the PC18 to show 
version and build in the text portion
14Mar01=======================================================================
1. first cut at outgoing ax25 /external program connects
2. slight change of interface to connect
3. added a build number to sh/version
13Mar01=======================================================================
1. implemented first cut at non blocking connect
2. removed memory leakage in connects
3. add link IP address if available on who
4. made the \r\n work correctly on External connections
5. removed client.pl
6. fixed memory leakages in DXMsg
7. fixed pc39/21 handling
8. fixed routing table issues and general disconnection tidy up
10Mar01=======================================================================
1. minor changes to the admin manual to reflect differences in distibutions
thanks to pa3ezl (g0vgs)
2. add (finally) the first draft of the usermanual (g0vgs)
05Mar01=======================================================================
1. do some major surgery on the connect logic to shorten the possibility of 
duplicate connects happening
2. fix stupid error on sh/qrz queries that don't work
04Mar01=======================================================================
1. allow fallback to english for help
03Mar01=======================================================================
1. allow incoming and outgoing IP connects direct to cluster.pl
2. fixed (long standing)a hole in PC17 handling
3. added winclient.pl (actually just a very basic client) from Iain G0RDI